tests/sksl/errors/UseWithoutInitializeArrayIndex.sksl
void array_index()      { int x[2][2]; int i; x[i][1] = 4; }
